// Vitest Snapshot v1

exports[`Tx Executor > should add the NFT to the account of the minter 1`] = `
BEP126Collection {
  "accessControlList": {
    "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl": BEP126User {
      "permissions": [
        0,
        1,
        2,
      ],
      "role": 0,
    },
  },
  "currentOwner": "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl",
  "id": "a77d3cda10319ef1453ed69bfa8aef4c4c554a589d68a43d2e3eb63639bb3d85",
  "initialOwner": "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl",
  "name": "name",
  "policies": [
    BEP126Policy {
      "args": "",
      "name": "@bearmint/bep-145",
      "type": 0,
    },
    BEP126Policy {
      "args": "",
      "name": "@bearmint/bep-145",
      "type": 1,
    },
    BEP126Policy {
      "args": "",
      "name": "@bearmint/bep-145",
      "type": 2,
    },
  ],
  "symbol": "symbol",
  "tokens": [],
  "uriPrefix": "uriPrefix",
  "uriSuffix": "uriSuffix",
}
`;

exports[`Tx Executor > should add the NFT to the account of the minter 2`] = `
BEP126Collection {
  "accessControlList": {
    "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl": BEP126User {
      "permissions": [
        0,
        1,
        2,
      ],
      "role": 0,
    },
  },
  "currentOwner": "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl",
  "id": "a77d3cda10319ef1453ed69bfa8aef4c4c554a589d68a43d2e3eb63639bb3d85",
  "initialOwner": "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl",
  "name": "name",
  "policies": [
    BEP126Policy {
      "args": "",
      "name": "@bearmint/bep-145",
      "type": 0,
    },
    BEP126Policy {
      "args": "",
      "name": "@bearmint/bep-145",
      "type": 1,
    },
    BEP126Policy {
      "args": "",
      "name": "@bearmint/bep-145",
      "type": 2,
    },
  ],
  "symbol": "symbol",
  "tokens": [
    "f013165441c2d9cc7ea26cfe5cd7d9cff50b06384a772d012ba92b0b65ca694a",
  ],
  "uriPrefix": "uriPrefix",
  "uriSuffix": "uriSuffix",
}
`;

exports[`Tx Executor > should add the NFT to the account of the recipient 1`] = `
BEP126Collection {
  "accessControlList": {
    "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl": BEP126User {
      "permissions": [
        0,
        1,
        2,
      ],
      "role": 0,
    },
  },
  "currentOwner": "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl",
  "id": "a77d3cda10319ef1453ed69bfa8aef4c4c554a589d68a43d2e3eb63639bb3d85",
  "initialOwner": "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl",
  "name": "name",
  "policies": [
    BEP126Policy {
      "args": "",
      "name": "@bearmint/bep-145",
      "type": 0,
    },
    BEP126Policy {
      "args": "",
      "name": "@bearmint/bep-145",
      "type": 1,
    },
    BEP126Policy {
      "args": "",
      "name": "@bearmint/bep-145",
      "type": 2,
    },
  ],
  "symbol": "symbol",
  "tokens": [],
  "uriPrefix": "uriPrefix",
  "uriSuffix": "uriSuffix",
}
`;

exports[`Tx Executor > should add the NFT to the account of the recipient 2`] = `
BEP126Collection {
  "accessControlList": {
    "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl": BEP126User {
      "permissions": [
        0,
        1,
        2,
      ],
      "role": 0,
    },
  },
  "currentOwner": "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl",
  "id": "a77d3cda10319ef1453ed69bfa8aef4c4c554a589d68a43d2e3eb63639bb3d85",
  "initialOwner": "bear15z20cwcgszr54v7w7pxulyv3pyqjz878rmvzqtjf2sqphz7gv4hrz0f44vuwgx57qy6h0c064x3rw44zxpl",
  "name": "name",
  "policies": [
    BEP126Policy {
      "args": "",
      "name": "@bearmint/bep-145",
      "type": 0,
    },
    BEP126Policy {
      "args": "",
      "name": "@bearmint/bep-145",
      "type": 1,
    },
    BEP126Policy {
      "args": "",
      "name": "@bearmint/bep-145",
      "type": 2,
    },
  ],
  "symbol": "symbol",
  "tokens": [
    "f013165441c2d9cc7ea26cfe5cd7d9cff50b06384a772d012ba92b0b65ca694a",
  ],
  "uriPrefix": "uriPrefix",
  "uriSuffix": "uriSuffix",
}
`;
